--- a/piano.html
+++ b/piano.html
@@ -25,8 +25,48 @@
         <a href="./marimba.html">marimba</a>
       </nav>
     </header>
-    <section class="main">
+    <section class="main piano">
       <h1>piano</h1>
+      <div class="piano-content">
+        <div class="piano-keys block-01">
+          <div data-note="1" class="key">1</div>
+          <div data-note="2" class="key">2</div>
+          <div data-note="3" class="key">3</div>
+        </div>
+        <div class="piano-keys block-02">
+          <div data-note="4" class="key">4</div>
+          <div data-note="5" class="key">5</div>
+          <div data-note="6" class="key">6</div>
+          <div data-note="7" class="key">7</div>
+        </div>
+        <div class="piano-keys block-01">
+          <div data-note="8" class="key">8</div>
+          <div data-note="9" class="key">9</div>
+          <div data-note="10" class="key">10</div>
+        </div>
+        <div class="piano-keys block-02">
+          <div data-note="11" class="key">11</div>
+          <div data-note="12" class="key">12</div>
+          <div data-note="13" class="key">13</div>
+          <div data-note="14" class="key">14</div>
+        </div>
+        <div class="piano-keys block-01">
+          <div data-note="15" class="key">15</div>
+          <div data-note="16" class="key">16</div>
+          <div data-note="17" class="key">17</div>
+
+        <div class="piano-keys block-02">
+          <div data-note="18" class="key">18</div>
+          <div data-note="19" class="key">19</div>
+          <div data-note="20" class="key">20</div>
+          <div data-note="21" class="key">21</div>
+        </div>
+        <div class="piano-keys block-01">
+          <div data-note="22" class="key">22</div>
+          <div data-note="23" class="key">23</div>
+          <div data-note="24" class="key">24</div>
+        </div>
+      </div>
     </section>
 
     <footer class="footer">
@@ -35,6 +75,32 @@
         <span>Emmanuel Estupiñan</span> | todos los derechos reservados
       </p>
     </footer>
+
+    <audio id="1" src="./notes/piano/key01.mp3"></audio>
+    <audio id="2" src="./notes/piano/key02.mp3"></audio>
+    <audio id="3" src="./notes/piano/key03.mp3"></audio>
+    <audio id="4" src="./notes/piano/key04.mp3"></audio>
+    <audio id="5" src="./notes/piano/key05.mp3"></audio>
+    <audio id="6" src="./notes/piano/key06.mp3"></audio>
+    <audio id="7" src="./notes/piano/key07.mp3"></audio>
+    <audio id="8" src="./notes/piano/key08.mp3"></audio>
+    <audio id="9" src="./notes/piano/key09.mp3"></audio>
+    <audio id="10" src="./notes/piano/key10.mp3"></audio>
+    <audio id="11" src="./notes/piano/key11.mp3"></audio>
+    <audio id="12" src="./notes/piano/key12.mp3"></audio>
+    <audio id="13" src="./notes/piano/key13.mp3"></audio>
+    <audio id="14" src="./notes/piano/key14.mp3"></audio>
+    <audio id="15" src="./notes/piano/key15.mp3"></audio>
+    <audio id="16" src="./notes/piano/key16.mp3"></audio>
+    <audio id="17" src="./notes/piano/key17.mp3"></audio>
+    <audio id="18" src="./notes/piano/key18.mp3"></audio>
+    <audio id="19" src="./notes/piano/key19.mp3"></audio>
+    <audio id="20" src="./notes/piano/key20.mp3"></audio>
+    <audio id="21" src="./notes/piano/key21.mp3"></audio>
+    <audio id="22" src="./notes/piano/key22.mp3"></audio>
+    <audio id="23" src="./notes/piano/key23.mp3"></audio>
+    <audio id="24" src="./notes/piano/key24.mp3"></audio>
     <script src="./js/main.js"></script>
+    <script src="./js/piano.js"></script>
   </body>
 </html>
