--- a/bateria.html
+++ b/bateria.html
@@ -25,7 +25,7 @@
         <a href="./marimba.html">marimba</a>
       </nav>
     </header>
-    <section class="main">
+    <section class="piano">
       <h1>bateria</h1>
     </section>
 
