--- a/bateria.html
+++ b/bateria.html
@@ -25,7 +25,7 @@
         <a href="./marimba.html">marimba</a>
       </nav>
     </header>
-    <section class="piano">
+    <section class="bateria">
       <h1>bateria</h1>
     </section>
 
@@ -36,5 +36,6 @@
       </p>
     </footer>
     <script src="./js/main.js"></script>
+    <script src="./js/bateria.js"></script>
   </body>
 </html>
