--- a/bateria.html
+++ b/bateria.html
@@ -27,6 +27,54 @@
     </header>
     <section class="bateria">
       <h1>bateria</h1>
+      <div class="bateria-content">
+        <div class="bateria-content-top">
+          <div class="bateria-content-img">
+            <img src="./img/bateria_img/crash-cymbal.png" alt="crash" />
+          </div>
+          <div class="bateria-content-img">
+            <img src="./img/bateria_img/ride-cymbal.png" alt="ride" />
+          </div>
+        </div>
+        <div class="bateria-content-mid">
+          <div class="bateria-content-img">
+            <img
+              class="kick"
+              src="./img/bateria_img/tom1.png"
+              alt="redoblante"
+            />
+          </div>
+          <div class="bateria-content-img">
+            <img src="./img/bateria_img/tom2.png" alt="redoblante" />
+          </div>
+          <div class="bateria-content-img">
+            <img
+              class="kick"
+              src="./img/bateria_img/tom3.png"
+              alt="redoblante"
+            />
+          </div>
+        </div>
+        <div class="bateria-content-bot">
+          <div class="bateria-content-img">
+            <img
+              class="kick"
+              src="./img/bateria_img/kick-drum.png"
+              alt="kick"
+            />
+          </div>
+          <div class="bateria-content-img">
+            <img src="./img/bateria_img/snare-drum.png" alt="bombo" />
+          </div>
+          <div class="bateria-content-img">
+            <img
+              class="kick"
+              src="./img/bateria_img/kick-drum.png"
+              alt="kick"
+            />
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer class="footer">
