--- a/bateria.html
+++ b/bateria.html
@@ -29,25 +29,25 @@
       <h1>bateria</h1>
       <div class="bateria-content">
         <div class="bateria-content-top">
-          <div class="bateria-content-img">
+          <div data-sound="crash" class="bateria-content-img">
             <img src="./img/bateria_img/crash-cymbal.png" alt="crash" />
           </div>
-          <div class="bateria-content-img">
+          <div data-sound="ride" class="bateria-content-img">
             <img src="./img/bateria_img/ride-cymbal.png" alt="ride" />
           </div>
         </div>
         <div class="bateria-content-mid">
-          <div class="bateria-content-img">
+          <div data-sound="tom1" class="bateria-content-img">
             <img
               class="kick"
               src="./img/bateria_img/tom1.png"
               alt="redoblante"
             />
           </div>
-          <div class="bateria-content-img">
+          <div data-sound="tom2" class="bateria-content-img">
             <img src="./img/bateria_img/tom2.png" alt="redoblante" />
           </div>
-          <div class="bateria-content-img">
+          <div data-sound="tom3" class="bateria-content-img">
             <img
               class="kick"
               src="./img/bateria_img/tom3.png"
@@ -56,17 +56,17 @@
           </div>
         </div>
         <div class="bateria-content-bot">
-          <div class="bateria-content-img">
+          <div data-sound="kick-drum" class="bateria-content-img">
             <img
               class="kick"
               src="./img/bateria_img/kick-drum.png"
               alt="kick"
             />
           </div>
-          <div class="bateria-content-img">
+          <div data-sound="snare-drum" class="bateria-content-img">
             <img src="./img/bateria_img/snare-drum.png" alt="bombo" />
           </div>
-          <div class="bateria-content-img">
+          <div data-sound="kick-drum" class="bateria-content-img">
             <img
               class="kick"
               src="./img/bateria_img/kick-drum.png"
@@ -83,6 +83,35 @@
         <span>Emmanuel Estupiñan</span> | todos los derechos reservados
       </p>
     </footer>
+
+    <audio
+      id="crash"
+      src="./sound/Splash-Cymbal-Hit-D-www.fesliyanstudios.com.mp3"
+    ></audio>
+    <audio
+      id="ride"
+      src="./sound/Splash-Cymbal-Hit-Short-www.fesliyanstudios.com.mp3"
+    ></audio>
+    <audio
+      id="tom1"
+      src="./sound/Small-Tom-Drum-Hit-Level-6A-www.fesliyanstudios.com.mp3"
+    ></audio>
+    <audio
+      id="tom2"
+      src="./sound/Medium-Tom-Drum-Hit-Level-7B-www.fesliyanstudios.com.mp3"
+    ></audio>
+    <audio
+      id="tom3"
+      src="./sound/Floor-Tom-Drum-Hit-Level-7B-www.fesliyanstudios.com.mp3"
+    ></audio>
+    <audio
+      id="kick-drum"
+      src="./sound/Bass-Drum-Hit-Level-6c-www.fesliyanstudios.com.mp3"
+    ></audio>
+    <audio
+      id="snare-drum"
+      src="./sound/Snare-Drum-Hit-Level-6b-www.fesliyanstudios.com.mp3"
+    ></audio>
     <script src="./js/main.js"></script>
     <script src="./js/bateria.js"></script>
   </body>
