--- a/bateria.html
+++ b/bateria.html
@@ -29,49 +29,57 @@
       <h1>bateria</h1>
       <div class="bateria-content">
         <div class="bateria-content-top">
-          <div data-sound="crash" class="bateria-content-img">
+          <div data-sound="1" class="bateria-content-img">
             <img src="./img/bateria_img/crash-cymbal.png" alt="crash" />
+            <span>w</span>
           </div>
-          <div data-sound="ride" class="bateria-content-img">
+          <div data-sound="2" class="bateria-content-img">
             <img src="./img/bateria_img/ride-cymbal.png" alt="ride" />
+            <span>p</span>
           </div>
         </div>
         <div class="bateria-content-mid">
-          <div data-sound="tom1" class="bateria-content-img">
+          <div data-sound="3" class="bateria-content-img">
             <img
               class="kick"
               src="./img/bateria_img/tom1.png"
               alt="redoblante"
             />
+            <span>s</span>
           </div>
-          <div data-sound="tom2" class="bateria-content-img">
+          <div data-sound="4" class="bateria-content-img">
             <img src="./img/bateria_img/tom2.png" alt="redoblante" />
+            <span>g</span>
           </div>
-          <div data-sound="tom3" class="bateria-content-img">
+          <div data-sound="5" class="bateria-content-img">
             <img
               class="kick"
               src="./img/bateria_img/tom3.png"
               alt="redoblante"
             />
+            <span>l</span>
           </div>
         </div>
         <div class="bateria-content-bot">
-          <div data-sound="kick-drum" class="bateria-content-img">
+          <div data-sound="6" class="bateria-content-img">
             <img
               class="kick"
               src="./img/bateria_img/kick-drum.png"
               alt="kick"
             />
+            <span>x</span>
           </div>
-          <div data-sound="snare-drum" class="bateria-content-img">
+          <div data-sound="7" class="bateria-content-img">
             <img src="./img/bateria_img/snare-drum.png" alt="bombo" />
+            <span>b</span>
           </div>
-          <div data-sound="kick-drum" class="bateria-content-img">
+          <div data-sound="6" class="bateria-content-img">
             <img
               class="kick"
               src="./img/bateria_img/kick-drum.png"
               alt="kick"
             />
+            <span>,</span>
           </div>
         </div>
       </div>
@@ -85,31 +93,31 @@
     </footer>
 
     <audio
-      id="crash"
+      id="1"
       src="./sound/Splash-Cymbal-Hit-D-www.fesliyanstudios.com.mp3"
     ></audio>
     <audio
-      id="ride"
+      id="2"
       src="./sound/Splash-Cymbal-Hit-Short-www.fesliyanstudios.com.mp3"
     ></audio>
     <audio
-      id="tom1"
+      id="3"
       src="./sound/Small-Tom-Drum-Hit-Level-6A-www.fesliyanstudios.com.mp3"
     ></audio>
     <audio
-      id="tom2"
+      id="4"
       src="./sound/Medium-Tom-Drum-Hit-Level-7B-www.fesliyanstudios.com.mp3"
     ></audio>
     <audio
-      id="tom3"
+      id="5"
       src="./sound/Floor-Tom-Drum-Hit-Level-7B-www.fesliyanstudios.com.mp3"
     ></audio>
     <audio
-      id="kick-drum"
+      id="6"
       src="./sound/Bass-Drum-Hit-Level-6c-www.fesliyanstudios.com.mp3"
     ></audio>
     <audio
-      id="snare-drum"
+      id="7"
       src="./sound/Snare-Drum-Hit-Level-6b-www.fesliyanstudios.com.mp3"
     ></audio>
     <script src="./js/main.js"></script>
