--- a/marimba.html
+++ b/marimba.html
@@ -28,36 +28,36 @@
     <section class="marimba">
       <h1>marimba</h1>
       <div class="marimba-content">
-<div data-note="1"class="bar bar01">
-<span>1</span>
-</div>
-<div data-note="2"class="bar bar02">
-  <span>2</span>
-  </div>
-  <div data-note="3"class="bar bar03">
-    <span>3</span>
-    </div>
-    <div data-note="4"class="bar bar04">
-      <span>4</span>
-      </div>
-      <div data-note="5"class="bar bar05">
-        <span>5</span>
+        <div data-note="1" class="bar bar01">
+          <span>z</span>
         </div>
-        <div data-note="6"class="bar bar06">
-          <span>6</span>
-          </div>
-          <div data-note="7"class="bar bar07">
-            <span>7</span>
-            </div>
-            <div data-note="8" class="bar bar08">
-              <span>8</span>
-              </div>
-              <div data-note="9"class="bar bar09">
-                <span>9</span>
-                </div>
-                <div data-note="10"class="bar bar10">
-                  <span>10</span>
-                  </div>
+        <div data-note="2" class="bar bar02">
+          <span>x</span>
+        </div>
+        <div data-note="3" class="bar bar03">
+          <span>c</span>
+        </div>
+        <div data-note="4" class="bar bar04">
+          <span>v</span>
+        </div>
+        <div data-note="5" class="bar bar05">
+          <span>b</span>
+        </div>
+        <div data-note="6" class="bar bar06">
+          <span>n</span>
+        </div>
+        <div data-note="7" class="bar bar07">
+          <span>m</span>
+        </div>
+        <div data-note="8" class="bar bar08">
+          <span>,</span>
+        </div>
+        <div data-note="9" class="bar bar09">
+          <span>.</span>
+        </div>
+        <div data-note="10" class="bar bar10">
+          <span>-</span>
+        </div>
       </div>
     </section>
 
@@ -67,16 +67,16 @@
         <span>Emmanuel Estupiñan</span> | todos los derechos reservados
       </p>
     </footer>
-    <audio id="1"src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="2"src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="3"src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="4"src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="5"src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="6"src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="7"src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="8"src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="9"src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="10"src="./notes/marimba/008864060_prev.mp3"></audio>
+    <audio id="1" src="./notes/marimba/008864060_prev.mp3"></audio>
+    <audio id="2" src="./notes/marimba/008864060_prev.mp3"></audio>
+    <audio id="3" src="./notes/marimba/008864060_prev.mp3"></audio>
+    <audio id="4" src="./notes/marimba/008864060_prev.mp3"></audio>
+    <audio id="5" src="./notes/marimba/008864060_prev.mp3"></audio>
+    <audio id="6" src="./notes/marimba/008864060_prev.mp3"></audio>
+    <audio id="7" src="./notes/marimba/008864060_prev.mp3"></audio>
+    <audio id="8" src="./notes/marimba/008864060_prev.mp3"></audio>
+    <audio id="9" src="./notes/marimba/008864060_prev.mp3"></audio>
+    <audio id="10" src="./notes/marimba/008864060_prev.mp3"></audio>
 
     <script src="./js/main.js"></script>
     <script src="./js/marimba.js"></script>
