--- a/marimba.html
+++ b/marimba.html
@@ -67,16 +67,16 @@
         <span>Emmanuel Estupiñan</span> | todos los derechos reservados
       </p>
     </footer>
-    <audio id="1" src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="2" src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="3" src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="4" src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="5" src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="6" src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="7" src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="8" src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="9" src="./notes/marimba/008864060_prev.mp3"></audio>
-    <audio id="10" src="./notes/marimba/008864060_prev.mp3"></audio>
+    <audio id="1" src="./notes/marimba/marimba1.mp3"></audio>
+    <audio id="2" src="./notes/marimba/marimba2.mp3"></audio>
+    <audio id="3" src="./notes/marimba/marimba3.mp3"></audio>
+    <audio id="4" src="./notes/marimba/marimba4.mp3"></audio>
+    <audio id="5" src="./notes/marimba/marimba5.mp3"></audio>
+    <audio id="6" src="./notes/marimba/marimba6.mp3"></audio>
+    <audio id="7" src="./notes/marimba/marimba7.mp3"></audio>
+    <audio id="8" src="./notes/marimba/marimba8.mp3"></audio>
+    <audio id="9" src="./notes/marimba/marimba9.mp3"></audio>
+    <audio id="10" src="./notes/marimba/marimba10.mp3"></audio>
 
     <script src="./js/main.js"></script>
     <script src="./js/marimba.js"></script>
