--- a/bateria.html
+++ b/bateria.html
@@ -23,6 +23,8 @@
         <a href="./piano.html">piano</a>
         <a href="./bateria.html">batería</a>
         <a href="./marimba.html">marimba</a>
+        <a href="./flauta.html">flauta</a>
+
       </nav>
     </header>
     <section class="bateria">
