--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -23,6 +23,8 @@
         <a href="./piano.html">piano</a>
         <a href="./bateria.html">batería</a>
         <a href="./marimba.html">marimba</a>
+        <a href="./flauta.html">flauta</a>
+
       </nav>
     </header>
 
@@ -34,9 +36,7 @@
             <img src="./img/piano.png" alt="piano" />
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error et
-            pariatur molestias adipisci repellendus exercitationem perspiciatis
-            ducimus, perferendis corporis? Autem?
+            El piano es un instrumento majestuoso, gallardo y portentoso con el cual se pueden crear las más hermosas melodías que han venido acompañando al arte desde eras medievales.
           </p>
         </div>
         <div class="card" id="bateria">
@@ -45,9 +45,7 @@
           </div>
 
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error et
-            pariatur molestias adipisci repellendus exercitationem perspiciatis
-            ducimus, perferendis corporis? Autem?
+            La batería es un instrumento musical que pertenece a la familia de percusión. Este equipo estándar se usa en la música pop, el blues, el jazz, el rock, el heavy metal.
           </p>
         </div>
         <div class="card" id="marimba">
@@ -55,9 +53,7 @@
             <img src="./img/marimba.png" alt="marimba" />
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error et
-            pariatur molestias adipisci repellendus exercitationem perspiciatis
-            ducimus, perferendis corporis? Autem?
+            Marimba. Es un instrumento hecho de láminas de madera afinadas, dispuestas en forma de teclado. Es una versión del Xilófono pero tiene mayor extensión de registro (hasta cinco octavas).
           </p>
         </div>
       </div>
