--- a/flauta.html
+++ b/flauta.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Escuela de musica Flauta</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
   </head>
   <body>
     <header class="header">
@@ -24,6 +28,10 @@
     </header>
     <section class="flauta">
       <h1>flauta</h1>
+
+      <div class="flauta-img">
+        <img src="./img/flauta.png" alt="flauta" />
+      </div>
       <div class="flauta-content">
         <div data-note="1" class="circle"><span>z</span></div>
         <div data-note="2" class="circle"><span>x</span></div>
