--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="./bateria.html">batería</a>
         <a href="./marimba.html">marimba</a>
         <a href="./flauta.html">flauta</a>
-
+        <a href="./sax.html">sax</a>
       </nav>
     </header>
 
@@ -36,7 +36,9 @@
             <img src="./img/piano.png" alt="piano" />
           </div>
           <p>
-            El piano es un instrumento majestuoso, gallardo y portentoso con el cual se pueden crear las más hermosas melodías que han venido acompañando al arte desde eras medievales.
+            El piano es un instrumento majestuoso, gallardo y portentoso con el
+            cual se pueden crear las más hermosas melodías que han venido
+            acompañando al arte desde eras medievales.
           </p>
         </div>
         <div class="card" id="bateria">
@@ -45,7 +47,9 @@
           </div>
 
           <p>
-            La batería es un instrumento musical que pertenece a la familia de percusión. Este equipo estándar se usa en la música pop, el blues, el jazz, el rock, el heavy metal.
+            La batería es un instrumento musical que pertenece a la familia de
+            percusión. Este equipo estándar se usa en la música pop, el blues,
+            el jazz, el rock, el heavy metal.
           </p>
         </div>
         <div class="card" id="marimba">
@@ -53,7 +57,9 @@
             <img src="./img/marimba.png" alt="marimba" />
           </div>
           <p>
-            Marimba. Es un instrumento hecho de láminas de madera afinadas, dispuestas en forma de teclado. Es una versión del Xilófono pero tiene mayor extensión de registro (hasta cinco octavas).
+            Marimba. Es un instrumento hecho de láminas de madera afinadas,
+            dispuestas en forma de teclado. Es una versión del Xilófono pero
+            tiene mayor extensión de registro (hasta cinco octavas).
           </p>
         </div>
       </div>
