--- a/sax.html
+++ b/sax.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Escuela de Musica Marimba</title>
+    <title>Escuela de Musica Sax</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
@@ -27,37 +27,41 @@
         <a href="./sax.html">sax</a>
       </nav>
     </header>
-    <section class="marimba">
-      <h1>marimba</h1>
-      <div class="marimba-content">
-        <div data-note="1" class="bar bar01">
+
+    <section class="sax">
+      <h1>Sax</h1>
+      <div class="sax-img">
+          <img src="./img/sax.png" alt="sax"></i>
+      </div>
+      <div class="sax-content">
+        <div data-note="1" class="sax-item">
           <span>z</span>
         </div>
-        <div data-note="2" class="bar bar02">
+        <div data-note="2" class="sax-item">
           <span>x</span>
         </div>
-        <div data-note="3" class="bar bar03">
+        <div data-note="3" class="sax-item">
           <span>c</span>
         </div>
-        <div data-note="4" class="bar bar04">
+        <div data-note="4" class="sax-item">
           <span>v</span>
         </div>
-        <div data-note="5" class="bar bar05">
+        <div data-note="5" class="sax-item">
           <span>b</span>
         </div>
-        <div data-note="6" class="bar bar06">
+        <div data-note="6" class="sax-item">
           <span>n</span>
         </div>
-        <div data-note="7" class="bar bar07">
+        <div data-note="7" class="sax-item">
           <span>m</span>
         </div>
-        <div data-note="8" class="bar bar08">
+        <div data-note="8" class="sax-item">
           <span>,</span>
         </div>
-        <div data-note="9" class="bar bar09">
+        <div data-note="9" class="sax-item">
           <span>.</span>
         </div>
-        <div data-note="10" class="bar bar10">
+        <div data-note="10" class="sax-item">
           <span>-</span>
         </div>
       </div>
@@ -93,21 +97,22 @@
     <footer class="footer">
       <p>
         Diseñado por <span>Christian Lazo</span> &
-        <span>Emmanuel Estupiñan</span> | todos los derechos reservados
+        <span>Emmanuel Estupiñan</span> | ©todos los derechos reservados 2022
       </p>
     </footer>
-    <audio id="1" src="./notes/marimba/marimba1.mp3"></audio>
-    <audio id="2" src="./notes/marimba/marimba2.mp3"></audio>
-    <audio id="3" src="./notes/marimba/marimba3.mp3"></audio>
-    <audio id="4" src="./notes/marimba/marimba4.mp3"></audio>
-    <audio id="5" src="./notes/marimba/marimba5.mp3"></audio>
-    <audio id="6" src="./notes/marimba/marimba6.mp3"></audio>
-    <audio id="7" src="./notes/marimba/marimba7.mp3"></audio>
-    <audio id="8" src="./notes/marimba/marimba8.mp3"></audio>
-    <audio id="9" src="./notes/marimba/marimba9.mp3"></audio>
-    <audio id="10" src="./notes/marimba/marimba10.mp3"></audio>
+
+    <audio id="1" src="./notes/sax/sax1.mp3"></audio>
+    <audio id="2" src="./notes/sax/sax2.mp3"></audio>
+    <audio id="3" src="./notes/sax/sax3.mp3"></audio>
+    <audio id="4" src="./notes/sax/sax4.mp3"></audio>
+    <audio id="5" src="./notes/sax/sax5.mp3"></audio>
+    <audio id="6" src="./notes/sax/sax6.mp3"></audio>
+    <audio id="7" src="./notes/sax/sax7.mp3"></audio>
+    <audio id="8" src="./notes/sax/sax8.mp3"></audio>
+    <audio id="9" src="./notes/sax/sax9.mp3"></audio>
+    <audio id="10" src="./notes/sax/sax10.mp3"></audio>
 
     <script src="./js/main.js"></script>
-    <script src="./js/marimba.js"></script>
+    <script src="./js/sax.js"></script>
   </body>
 </html>
