--- a/bateria.html
+++ b/bateria.html
@@ -24,7 +24,7 @@
         <a href="./bateria.html">batería</a>
         <a href="./marimba.html">marimba</a>
         <a href="./flauta.html">flauta</a>
-
+        <a href="./sax.html">sax</a>
       </nav>
     </header>
     <section class="bateria">
@@ -84,6 +84,34 @@
             <span>,</span>
           </div>
         </div>
+      </div>
+
+      <div class="modal-container" id="modal">
+        <div class="modal modal-close">
+          <span class="close">X</span>
+          <img src="./img/undraw_compose_music_ovo2.svg" alt="music" />
+          <div class="modal-text">
+            <h2>Recuerda que puedes usar el teclado de tu computadora</h2>
+            <p>
+              para un mejor funcionamiendo desactiva scrits que creen atajos en
+              tu teclado
+            </p>
+            <p>
+              se recomienda usar el navegador brave para un buen funcionamiento
+            </p>
+            <p>
+              puedes tocar los instrumentos con la letra que esta en cada texto
+            </p>
+            <p>
+              recuerda simpre usar el teclado en minusculas para que funcione
+              perfectamente
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="btn">
+        <button id="btn">instrucciones</button>
       </div>
     </section>
 
