--- a/flauta.html
+++ b/flauta.html
@@ -87,6 +87,7 @@
     <audio id="8" src="./notes/flauta/p8.wav"></audio>
 
     <script src="./js/main.js"></script>
+    <script src="./js/modal.js"></script>
     <script src="./js/flauta.js"></script>
   </body>
 </html>
