--- a/marimba.html
+++ b/marimba.html
@@ -108,6 +108,7 @@
     <audio id="10" src="./notes/marimba/marimba10.mp3"></audio>
 
     <script src="./js/main.js"></script>
+    <script src="./js/modal.js"></script>
     <script src="./js/marimba.js"></script>
   </body>
 </html>
