--- a/piano.html
+++ b/piano.html
@@ -109,6 +109,7 @@
     <audio id="16" src="./notes/piano/MIb5.mp3"></audio>
     <audio id="17" src="./notes/piano/MI5.mp3"></audio>
     <script src="./js/main.js"></script>
+    <script src="./js/modal.js"></script>
     <script src="./js/piano.js"></script>
   </body>
 </html>
