--- a/sax.html
+++ b/sax.html
@@ -113,6 +113,7 @@
     <audio id="10" src="./notes/sax/sax10.mp3"></audio>
 
     <script src="./js/main.js"></script>
+    <script src="./js/modal.js"></script>
     <script src="./js/sax.js"></script>
   </body>
 </html>
