--- a/bateria.html
+++ b/bateria.html
@@ -151,6 +151,7 @@
       src="./sound/Snare-Drum-Hit-Level-6b-www.fesliyanstudios.com.mp3"
     ></audio>
     <script src="./js/main.js"></script>
+    <script src="./js/modal.js"></script>
     <script src="./js/bateria.js"></script>
   </body>
 </html>
